# polymarket-copytrade

./: .env.template  .gitignore  CLAUDE.md  Cargo.toml  EXPLORATION.md  PLAN.md  README.md  config.toml.template
src/: api.rs  auth.rs  config.rs  engine.rs  executor.rs  lib.rs  reporter.rs  state.rs  types.rs
