[package]
name = "polymarket-copytrade"
version = "0.1.0"
authors = ["Rafael Lemos <contact@flemosr.com>"]
edition = "2024"
rust-version = "1.88"
readme = "README.md"
license = "Apache-2.0"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
polymarket-client-sdk = { version = "0.3", features = ["data", "gamma"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_decimal = "1"
rust_decimal_macros = "1"
toml = "0.8"
rpassword = "7"
k256 = { version = "0.13.4", features = ["ecdsa"] }

[[bin]]
name = "copytrade"
path = "src/bin/copytrade.rs"

[[bin]]
name = "probe_trades"
path = "src/bin/probe_trades.rs"

[[bin]]
name = "probe_positions"
path = "src/bin/probe_positions.rs"

[[bin]]
name = "probe_rtds"
path = "src/bin/probe_rtds.rs"

[[bin]]
name = "probe_clob_ws"
path = "src/bin/probe_clob_ws.rs"

[[bin]]
name = "probe_ws_btc"
path = "src/bin/probe_ws_btc.rs"

[[bin]]
name = "setup-account"
path = "src/bin/setup_account.rs"

[[bin]]
name = "probe_clob_trade"
path = "src/bin/probe_clob_trade.rs"

[[bin]]
name = "probe_my_positions"
path = "src/bin/probe_my_positions.rs"
